# iocscan

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
docs/superpowers/plans/: 2026-05-17-iocscan.md
docs/superpowers/specs/: 2026-05-17-iocscan-design.md
iocscan/: __main__.py  cli.py  explain.py
iocscan/core/: cache.py  config.py  ioc.py  observability.py  quota.py  scan.py  tranco.py  verdict.py  whitelist.py
iocscan/providers/: __init__.py  abuseipdb.py  base.py  circl_hashlookup.py  crtsh.py  feodo.py  greynoise.py  malwarebazaar.py  otx.py  shodan_internetdb.py  spamhaus.py  team_cymru.py  threatfox.py  tor.py  urlhaus.py  urlscan.py  virustotal.py  whois_age.py  yaraify.py
iocscan/ui/: console.py  export.py  field_filter.py  footer.py  glyph.py  hunt.py  json_out.py  providers_table.py  table.py  themes.py
tests/: conftest.py
tests/cli/: test_cli.py  test_cmd_glyphs.py  test_cmd_providers.py  test_explain.py  test_health.py  test_scan_progress.py
tests/core/: test_quota.py
tests/fixtures/responses/abuseipdb/: clean.json  hit.json
tests/fixtures/responses/feodo/: list.json
tests/fixtures/responses/otx/: clean.json  hit.json
tests/fixtures/responses/threatfox/: hit.json  miss.json
tests/fixtures/responses/urlhaus/: hit.json
tests/fixtures/responses/virustotal/: file_hit.json  ip_clean.json  ip_hit.json
tests/integration/: test_smoke.py
tests/providers/: test_abuseipdb.py  test_base.py  test_circl_hashlookup.py  test_crtsh.py  test_feodo.py  test_greynoise.py  test_malwarebazaar.py  test_otx.py  test_permalinks.py  test_registry.py  test_shodan_internetdb.py  test_spamhaus.py  test_team_cymru.py  test_threatfox.py  test_tor.py  test_urlhaus.py  test_urlscan.py  test_virustotal.py  test_whois_age.py  test_yaraify.py
tests/ui/: test_border_color.py  test_providers_table.py  test_table_details.py
tests/unit/: test_cache.py  test_config.py  test_console.py  test_export.py  test_field_filter.py  test_footer.py  test_glyph.py  test_hunt.py  test_ioc.py  test_json_out.py  test_observability.py  test_provider_result.py  test_scan.py  test_scan_on_result.py  test_sort.py  test_table.py  test_themes.py  test_tranco.py  test_verdict.py  test_whitelist.py
uninstall/: uninstall.ps1  uninstall.sh
