[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iocscan"
version = "0.1.0"
description = "Blue-team CLI: consolidated malicious/clean verdicts for IPs and domains across 9 open-source TI providers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "n.erhan.ersoy"}]
dependencies = [
    "httpx[http2]>=0.27",
    "rich>=13.7",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[project.scripts]
iocscan = "iocscan.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["network: hits live endpoints, skipped by default"]
addopts = "-ra -m 'not network'"
testpaths = ["tests"]
